Made simpler by using URIs who would've thought.